kube/deployments/postgres-deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres-container
  template:
    metadata:
      labels:
        name: postgres-container
    spec:
      containers:
        - name: postgres-container
          image: postgres:9.6
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /db-data
              name: postgres-volume
      volumes:
        - name: postgres-volume
          awsElasticBlockStore:
            volumeID: vol-0cfe643a41f01f8cd

        # - name: postgres-pv
        #   persistentVolumeClaim:
        #     claimName: postgres-pvc
