kube/deployments/rails-deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: rails-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: rails-container
  template:
    metadata:
      labels:
        name: rails-container
    spec:
      containers:
        - name: rails-container
          image: ryangrush/blog_app:latest
          ports:
            - containerPort: 3000
